Fix dropdown z-index and position on mobile views

--- a/app/scss/_rwd.scss
+++ b/app/scss/_rwd.scss
@@ -80,7 +80,7 @@
 		text-align: center;
 	}
 	// footer END
-	
+
 	// Product page
 	body .product__info {
 		padding-left: 0;
@@ -138,7 +138,7 @@
 		flex-direction: column;
 		& .news__img {
 			margin-right: 0;
-			margin-bottom: 20px; 
+			margin-bottom: 20px;
 			& img {
 				display: block;
 				margin: 0 auto;
@@ -146,7 +146,7 @@
 		}
 	}
 	// News page END
-	
+
 	// Job page
 	body .job__wrapper {
 		flex-direction: column;
@@ -281,5 +281,9 @@
 	}
 	body .news__img img {
 		width: 100%;
+	}
+	body .hasDropdown--nav .dropdown {
+		top: 0;
+		left: -50%;
 	}
 }
